--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,9 +2,7 @@
 body {
   color: #520909d1;
 }
-.hidden {
-  display: none;
-}
+
 
  .bot__wrapper{
   width: 60%;
@@ -51,10 +49,12 @@ body {
 
  .bot__menu{
   position: absolute;
-  right: 10px;
+  right: 15px;
   top: 10px;
   border: 1px skyblue none;
-  background-color: rgba(173, 216, 230, 0.098);
+  border-radius: 30%;
+  background-color: rgba(36, 77, 226, 0.4);
+  z-index: 5;
  }
 
  .message{
@@ -64,7 +64,8 @@ body {
   padding: 5px;
   
   border: 1px solid blue;
-  width: 80%;
+  width: auto;
+  max-width: 80%;
   margin: 10px;
  }
 
@@ -75,6 +76,7 @@ body {
  .message__time{
   align-self: flex-end;
   font-size: 12px;
+  margin-top: 10px;
  }
 
  .bot__add{
@@ -88,9 +90,105 @@ body {
   width: 200px;
   top: -27px;
   left: 1px;
+  background-color: rgba(36, 77, 226, 0.4);
+ }
+
+ .up__menu{
+  position: absolute;
+  right: 15px;
+  top: 40px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 3px;
+  width: 100px;
+  border: 1px solid rgba(36, 77, 226, 0.8) ;
+  border-radius: 3px;
+
+ }
+
+ .up__menu > span {
+  background-color: rgba(36, 77, 226, 0.8);
+  color: beige;
+  border-radius: 3px;
+  text-align: center;
  }
 
  .message:last-child{
   margin-bottom: 400px;
-  background-color: red;
+  /* background-color: red; */
  }
+
+.capture__file{
+  position: absolute;
+  top: 50%;
+  left: 20%;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid rgba(36, 77, 226, 0.8);
+  border-radius: 10px;
+  padding-top: 20px;
+}
+
+
+.capture__wrapper{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  z-index: 2;
+}
+
+.capture__input{
+
+}
+
+.capture__btn{
+  width: 100%;
+  text-align: center;
+  background-color: rgba(36, 77, 226, 0.8);
+}
+
+.capture__message{
+  padding-top: 20px;
+  width: 250px;
+}
+
+
+
+
+.message__text{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.find__wrapper{
+  position: absolute;
+  width: 100%;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+
+}
+
+.find__input {
+  width: 80%;
+  border-radius: 10px;
+  border: 1px solid blue;
+  padding: 5px;
+}
+
+.find__close{
+  position: relative;
+  right: 20px;
+  top: 5px;
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
+}
